fix overflow for top and bottom panels

--- a/src/styles/menubar.css
+++ b/src/styles/menubar.css
@@ -13,6 +13,7 @@
   -webkit-app-region: no-drag;
   position: relative;
   z-index: 500;
+  overflow: hidden;
 }
 
 .menu-item {
